--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "express": "^4.17.3"
+    "-": "^0.0.1",
+    "express": "^4.17.3",
+    "g": "^2.0.1",
+    "nodemon": "^2.0.15"
   }
 }
